<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/mediaFragment"
        android:icon="@drawable/ic_library"
        android:title="@string/title_media" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/downloadsFragment"
        android:icon="@drawable/ic_download"
        android:title="@string/title_download" />

</menu>