...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@id/exo_buffering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <TextView
...
