...

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_button_description"
            android:enabled="false"
            android:paddingHorizontal="24dp"
...
